Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjNumberRetBoolean.quorum
class Main
    action Main
        Yoda<Boolean, Boolean, number> yoda
        number y = yoda:useForce(true, true)
        output "passed"
     end
end
