Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriNumberRetBooleanFail.quorum
class Main
    action Main
        Yoda<Boolean, Boolean, number> yoda
        boolean y = yoda(true, true, true)
     end
end
